# reloj-de-sol-digital-cadquery

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  reloj-de-sol-digital.py
digital_sundial/: __init__.py
output/: base.stl  coupling.stl  discrete_sundial.stl  sundial.stl  sundial_bottom.stl  sundial_top.stl
