[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reloj-de-sol-digital-cadquery"
version = "0.1.0"
authors = [
  { name="Leandro Batlle", email="" }
  { name="Luis López Soler", email="" },
]
description = "A digital sundial in CadQuery"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lopezsolerluis/reloj-de-sol-digital-cadquery"
